--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ Dawn of One Piece is not affiliated to Eiichiro Oda, Shueisha, Toei, VIZ, Shonen
     </footer>
 
     <div class="sub-footer">
-        <p>Copyright &copy; 2019 Rushikesh Bodke
+        <p>Copyright &copy; 2019 Rishi Bodke
     
     	-Template: <a rel="nofollow" href="http://www.templatemo.com">Template Mo</a></p>
     </div>
